xterm (266-2) UNRELEASED; urgency=low

  * Prefer lynx-cur over lynx in Build-Depends.
  * Update xsfbs.
  * Drop useless debian/xterm.dirs.
  * Stop recommending the transitional xutils package.
  * Mention ncurses-base in README.Debian (Closes: #373139).

 -- Sven Joachim <svenjoac@gmx.de>  Sat, 20 Nov 2010 13:14:37 +0100

xterm (266-1) unstable; urgency=low

  * New upstream release (Closes: #601103, yay for patience…):
    + Fix a regression in fontname logic from patch #263, thanks to
      Vincent Lefevre (Closes: #600707).
  * Fix watch file: use PASV mode.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 27 Oct 2010 14:23:02 +0200

xterm (264-1) unstable; urgency=low

  * New upstream release:
    + Fix active-icon in specific cases (Closes: #591265).
    + Fix pointer visibility issues (Closes: #594856).
    + Fix segmentation fault with -fb and other options (Closes: #600129).
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 14 Oct 2010 23:53:57 +0200

xterm (261-1) unstable; urgency=low

  * New upstream release
    + fix regression in renderFont logic, from patch #260 changes
      (closes: #587428)

 -- Julien Cristau <jcristau@debian.org>  Mon, 28 Jun 2010 21:53:28 +0100

xterm (260-1) unstable; urgency=low

  * New upstream release
    + extend renderFont resource to allow deferred switch to TrueType fonts
      without affecting existing resource settings (closes: #585620)
    + change configure script default for --enable-broken-st (i.e., the
      brokenStringTerm feature) to normally enable it.  If the corresponding
      resource is enabled, this feature eliminates an apparent freeze of xterm
      when sending mis-encoded data to the screen (closes: #584801)
    + undo a change to limit-check in ScrnRefresh in patch #257, which broke
      fastScroll feature (closes: #584841)

 -- Julien Cristau <jcristau@debian.org>  Fri, 25 Jun 2010 19:58:38 +0100

xterm (259-1) unstable; urgency=low
