@@ -3,6 +3,6 @@ ctlseqs.ms
 ctlseqs.txt
 xterm.log.html
 debian/local/xterm.faq.html
-debian/local/xterm.faq.gz
+debian/local/xterm.faq
 debian/tmp/usr/lib/xterm.termcap
 debian/tmp/usr/lib/xterm.terminfo
