@@ -5,6 +5,8 @@ xterm (266-2) UNRELEASED; urgency=low
   * Drop useless debian/xterm.dirs.
   * Stop recommending the transitional xutils package.
   * Mention ncurses-base in README.Debian (Closes: #373139).
+  * Do not manually gzip the text version of the FAQ, dh_compress can take
+    care of that.
 
  -- Sven Joachim <svenjoac@gmx.de>  Sat, 20 Nov 2010 13:14:37 +0100
 
